tests/baselines/reference/symbolProperty33.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty33.ts(1,18): error TS2449: Class 'C2' used before its declaration.
tests/cases/conformance/es6/Symbols/symbolProperty33.ts(7,6): error TS1023: An index signature parameter type must be 'string' or 'number'.


==== tests/cases/conformance/es6/Symbols/symbolProperty33.ts (2 errors) ====
    class C1 extends C2 {
                     ~~
!!! error TS2449: Class 'C2' used before its declaration.
        [Symbol.toStringTag]() {
            return { x: "" };
        }
    }
    class C2 {
        [s: symbol]: () => { x: string };
         ~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
    }